--- a/Spotify/package.json
+++ b/Spotify/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "morgan": "^1.9.0",
     "speaker": "^0.4.0",
     "spotify-web-api-node": "^2.5.0"
   },
