--- a/Spotify/package.json
+++ b/Spotify/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "babel-node ."
+    "start": "babel-node .",
+    "start-speaker": "babel-node ./src/speaker"
   },
   "author": "",
   "license": "ISC",
@@ -12,9 +13,13 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "lame": "^1.2.4",
     "morgan": "^1.9.0",
+    "request": "^2.83.0",
     "speaker": "^0.4.0",
-    "spotify-web-api-node": "^2.5.0"
+    "spotify-web-api-node": "^2.5.0",
+    "sqs-consumer": "^3.7.0",
+    "sqs-producer": "^1.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
