--- a/Spotify/package.json
+++ b/Spotify/package.json
@@ -13,13 +13,17 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "forever": "^0.15.3",
     "lame": "^1.2.4",
     "morgan": "^1.9.0",
+    "pm2": "^2.7.2",
     "request": "^2.83.0",
     "speaker": "^0.4.0",
     "spotify-web-api-node": "^2.5.0",
     "sqs-consumer": "^3.7.0",
-    "sqs-producer": "^1.5.0"
+    "sqs-producer": "^1.5.0",
+    "threads": "^0.8.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
