--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-Flask
-requests
-robobrowser
-lxml
+beautifulsoup4==4.6.0
+certifi==2017.7.27.1
+chardet==3.0.4
+click==6.7
+Flask==0.12.2
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.9.6
+lxml==4.1.0
+MarkupSafe==1.0
+requests==2.18.4
+robobrowser==0.5.3
+six==1.11.0
+urllib3==1.22
+Werkzeug==0.12.2
