--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 beautifulsoup4==4.6.0
+boto3==1.4.7
+botocore==1.7.36
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
+docutils==0.14
 Flask==0.12.2
+futures==3.1.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
+jmespath==0.9.3
 lxml==4.1.0
 MarkupSafe==1.0
+python-dateutil==2.6.1
+python-dotenv==0.7.1
 requests==2.18.4
 robobrowser==0.5.3
+s3transfer==0.1.11
+singleton-decorator==1.0.0
 six==1.11.0
 urllib3==1.22
 Werkzeug==0.12.2
